--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     let line;
     //用来表示一共应该多少行
 
-    realign();
+    window.onload=function(){
+        realign();
+    };
 
     function realign() {
         let bigArray = [];
